# icp1_s5

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  callback.c
src/basicstruct/: CMakeLists.txt  basicstruct.c
src/basicunion/: CMakeLists.txt  basicunion.c
src/callback/: callback.c
src/dynamicmemory/: CMakeLists.txt  dynamicmemory.c
src/pointerstruct/: CMakeLists.txt  pointerstruct.c
src/pointerunion/: CMakeLists.txt  pointerunion.c
src/sizeofstructunion/: CMakeLists.txt  sizeofstructunion.c
src/swap/: CMakeLists.txt  swap.c
