cmake_minimum_required(VERSION 3.10)

# Set the project name
project(MyCProject LANGUAGES C)

# Add subdirectories
add_subdirectory(callback)
add_subdirectory(basicstruct)
add_subdirectory(pointerstruct)
add_subdirectory(basicunion)
add_subdirectory(pointerunion)
add_subdirectory(dynamicmemory)
add_subdirectory(swap)
add_subdirectory(sizeofstructunion)